# Priority: Critical
# Test ID: C209290
# Title: XMR Asset balances load and show correctly for iOS
# Expected Result:
#   1. User is able to login and see correct balances for XMR only
# Notes: iOS cannot properly scroll so we only validate the first asset (XMR)

appId: ${MAESTRO_APP_ID}
tags:
- all
- C209290
---
- runFlow:
    file: ../common/launch-cleared.yaml

- runFlow:
    file: ../common/login-password.yaml
    env:
      USERNAME: ${MAESTRO_EDGE_XMR_USERNAME}
      PASSWORD: ${MAESTRO_EDGE_XMR_PASSWORD}

- runFlow:
    file: ../common/dismiss-modals.yaml

- tapOn: Assets

- extendedWaitUntil:
    visible: "XMR.*"
    timeout: 15000
- tapOn: "XMR.*"
- extendedWaitUntil:
    visible: 0.0112 XMR
    timeout: 15000
#- assertVisible: ɱ 0.0112

- stopApp
