# Priority: Critical
# Test ID: C209300
# Title: XTZ Asset balances load and show correctly for iOS
# Expected Result:
#   1. User is able to login and see correct balances for XTZ only

appId: ${MAESTRO_APP_ID}
tags:
- all
- C209300
---
- runFlow:
    file: ../common/launch-cleared.yaml
- runFlow:
    file: ../common/login-password.yaml
    env:
      USERNAME: ${MAESTRO_EDGE_XTZ_USERNAME}
      PASSWORD: ${MAESTRO_EDGE_XTZ_PASSWORD}

- extendedWaitUntil:
    visible: XTZ
    timeout: 120000
- tapOn: XTZ
- extendedWaitUntil:
    visible: 0.1158 XTZ
    timeout: 120000
- tapOn: Wallets

- stopApp