# Priority: Critical
# Test ID: C209304
# Title: DOT Asset balances load and show correctly for iOS
# Expected Result:
#   1. User is able to login and see correct balances for DOT only

appId: ${MAESTRO_APP_ID}
tags:
- all
- C209304
---
- runFlow:
    file: ../common/launch-cleared.yaml
- runFlow:
    file: ../common/login-password.yaml
    env:
      USERNAME: ${MAESTRO_EDGE_DOT_USERNAME}
      PASSWORD: ${MAESTRO_EDGE_DOT_PASSWORD}

- extendedWaitUntil:
    visible: DOT
    timeout: 120000
- tapOn: DOT
- extendedWaitUntil:
    visible: 1.023 DOT
    timeout: 120000
- tapOn: Wallets

- stopApp