# Priority: Critical
# Test ID: C209305
# Title: SOL Asset balances load and show correctly for iOS
# Expected Result:
#   1. User is able to login and see correct balances for SOL only

appId: ${MAESTRO_APP_ID}
tags:
- all
- C209305
---
- runFlow:
    file: ../common/launch-cleared.yaml
- runFlow:
    file: ../common/login-password.yaml
    env:
      USERNAME: ${MAESTRO_EDGE_SOL_USERNAME}
      PASSWORD: ${MAESTRO_EDGE_SOL_PASSWORD}

- extendedWaitUntil:
    visible: SOL
    timeout: 120000
- tapOn: SOL
- extendedWaitUntil:
    visible: 0.03647 SOL
    timeout: 120000
- tapOn: Wallets

- stopApp