# Priority: Critical
# Test ID: C999000
# Title: Navigate to tx details and verify Tile headers
# Expected Result:
#   1. User is able navigate to tx details and view all tx details fields
#   2. Able to navigate back to wallet with Done and back buttons

appId: ${MAESTRO_APP_ID}
tags:
- all
- C999000
---
- runFlow:
    file: ../common/launch-cleared.yaml
- runFlow:
    file: ../common/login-password.yaml
    env:
      USERNAME: ${MAESTRO_EDGE_TXDETAILS_USERNAME}
      PASSWORD: ${MAESTRO_EDGE_TXDETAILS_PASSWORD}
- runFlow:
    file: ../common/dismiss-modals.yaml

- tapOn: "Assets"
- extendedWaitUntil:
    visible: ".*My Bitcoin"
    timeout: 15000
- tapOn: ".*My Bitcoin"
- extendedWaitUntil:
    visible: 0.00003462 BTC
    timeout: 15000
# Scroll to tx history below chart (small screens)
- scroll
# iOS sees text differently (includes amount/date) so must "See All" first
- tapOn: See All
- tapOn: Sent Bitcoin

# Ensure tx details are visible
- assertVisible: "Recipient Name"
- assertVisible: "Bitcoin Amount"
- assertVisible: "Amount in USD"
- assertVisible: "Amount at Current Price"
- assertVisible: "Date"
- assertVisible: "Wallet"

# Scroll to see more details
- scrollUntilVisible:
    element: "View Advanced Transaction Data"
    speed: 10 
- assertVisible: "Category"
- assertVisible: "Notes"
- assertVisible: "Transaction ID"
- assertVisible: "Recipient Addresses"
- assertVisible: "View Advanced Transaction Data"

# Scroll to see more details
- scrollUntilVisible:
    element: Done
- assertVisible: "My Receive Addresses"
- assertVisible: "Fee Setting"
- assertVisible: "Fee Used"
- assertVisible: "Raw Transaction Bytes"
- assertVisible: "Device"

# Able to navigate back to wallet with Done and back buttons
- tapOn: Done
- tapOn:
    id: "chevronBack"
- assertVisible: "Bitcoin Network"

- stopApp
