# Priority: Critical
# Test ID: C999004
# Title: No crash on Exchange Max XRP with XRP DEX
# Expected Result:
#   1. No crash when getting a quote for a max exchange of XRP with XRP DEX enabled

appId: ${MAESTRO_APP_ID}
tags:
- all
- C999004
---
- runFlow:
    file: ../common/launch-cleared.yaml
- runFlow:
    file: ../common/login-password.yaml
    env:
      USERNAME: ${MAESTRO_EDGE_XRP_USERNAME}
      PASSWORD: ${MAESTRO_EDGE_XRP_PASSWORD}
- runFlow:
    file: ../common/dismiss-modals.yaml

- tapOn: "Assets"
- extendedWaitUntil:
    visible: "Wallets"
    timeout: 15000
- extendedWaitUntil:
    visible: ".*My XRP"
    timeout: 15000
- assertVisible:
    text: "Exchange"
- tapOn: "Exchange"
- tapOn: "Select Source Wallet"
- tapOn:
    id: "walletListRow.My XRP.XRP"
- tapOn: "Select Receiving Wallet"
- tapOn:
    id: "walletListRow.My XRP.Ripple USD"
- tapOn: "MAX"
- extendedWaitUntil:
    visible: "Tap to Change Provider"
    timeout: 15000

- stopApp
