# Priority: Critical
# Test ID: C000009
# Title: Password Reminder Notification
# Expected Result:
#   1. Verify password reminder notification is displayed
#   2. Verify password reminder notification is functional
#   3. Verify password reminder notification frequency

appId: ${MAESTRO_APP_ID}
env:
  LOGIN_TRIGGERS: "[4,8,16,5]"
tags:
- all
- C000009
---
- runFlow:
    file: ../common/launch-cleared.yaml

# Create new account
- runFlow:
    file: ../common/create-account.yaml
    label: "Create new account"
# Dismiss web3 handle modal if it appears
- runFlow:
    when:
      visible: "Claim Your Web3 Handle"
    commands:
      - tapOn:
          text: "Not Now"
# # Fallback solution
# # Realaunch multiple times to trigger reminder
# - repeat:
#     times: 3
#     commands:
#       - assertNotVisible: "Security Check.*"
#       - runFlow:
#           file: ../common/relogin-pin.yaml
#       - runFlow:
#           when:
#             visible: "How Did You Discover Edge?"
#           commands:
#             - tapOn:
#                 text: "Dismiss"

# If able to use array of logins that should trigger:
# Loop to check for reminder for each login trigger
- evalScript: ${output.currentLogin = 1}
- evalScript: ${output.currentLoginTrigger = 1}
- evalScript: ${output.loginTriggers = JSON.parse(LOGIN_TRIGGERS)}
- evalScript: ${output.lastLoginTrigger = output.loginTriggers[output.loginTriggers.length - 1]}
- repeat:
    while:
      # Run until last login trigger is reached
      true: ${output.currentLogin <= output.lastLoginTrigger}
    commands:
      # debug logging  
      - extendedWaitUntil:
          label: "Current Login: "
          visible: ${output.currentLogin}
          timeout: 1000
          optional: true
      - extendedWaitUntil:
          label: "Current Trigger: "
          visible: ${output.lastLoginTrigger}
          timeout: 1000
          optional: true
      # some error with logging here
      # Temporarly logging
    #   - extendedWaitUntil:
    #       visible: "Security Check.*"
    #       timeout: 5000
    #       optional: true
    #       label: ${"Checking Login Number" + output.currentLogin}
    #   - extendedWaitUntil:
    #       visible: ${"Checking Login Numberr" + output.currentLogin)}
    #       timeout: 5000
    #       optional: true
    #       label: No Label
    #   - evalScript: console.log("Checking Login Number:" + ${output.currentLogin})
    #   - evalScript: console.log("Checking Login Number:" + output.currentLogin)

      # When not expecting password reminder, ensure it isn't present
      - runFlow:
          when: 
              # Compare current login against next expected trigger
              true: ${output.currentLogin != output.loginTriggers[output.currentLoginTrigger - 1]}
          commands:
              - assertNotVisible:
                  text: "Security Check.*"
                  optional: true # Optional for now
     # When expecting password reminder, check for it
      - runFlow:
          when: 
              # Compare current login against next expected trigger
              true: ${output.currentLogin == output.loginTriggers[output.currentLoginTrigger - 1]}
          commands:
              - assertVisible:
                  text: "Security Check.*"
                  optional: true # Optional for now
              # Move to check next login trigger
              - evalScript: ${output.currentLoginTrigger = output.currentLoginTrigger + 1}

      # Login again and prepare for next check
      - runFlow:
          file: ../common/relogin-pin.yaml
      - runFlow:
          when:
              visible: "How Did You Discover Edge?"
          commands:
              - tapOn:
                  text: "Dismiss"
      - evalScript: ${output.currentLogin = output.currentLogin + 1}

# debug logging  
- extendedWaitUntil:
    label: "Current Login: "
    visible: ${output.currentLogin}
    timeout: 1000
    optional: true
- extendedWaitUntil:
    label: "Current Trigger: "
    visible: ${output.lastLoginTrigger}
    timeout: 1000
    optional: true